--- a/src/pages/private/home/Home.Style.css
+++ b/src/pages/private/home/Home.Style.css
@@ -1,72 +1,109 @@
 .angry-grid {
-    display: grid; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    height: 95vh;
-    margin: 1.2rem;
- }
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  height: 95vh;
+  margin: 1.2rem;
+}
+
+#item-0 {
+  grid-row-start: 1;
+  grid-column-start: 1;
+  grid-row-end: 2;
+  grid-column-end: 8;
+  border-radius: 0.5em;
  
- #item-0 {
-    background-color: #D9D9D9; 
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-row-end: 2;
-    grid-column-end: 8;
-    border-radius: 0.5em;
- }
- 
- #item-1 {
-    background-color: #D9D9D9; 
-    grid-row-start: 2;
-    grid-column-start: 1;
-    grid-row-end: 4;
-    grid-column-end: 3;
-    border-radius: 0.5em;
- }
- 
- #item-2 {
-    background-color: #D9D9D9; 
-    grid-row-start: 4;
-    grid-column-start: 1;
-    grid-row-end: 6;
-    grid-column-end: 3;
-    border-radius: 0.5em;
- }
- 
- #item-3 {
-    background-color: #D9D9D9; 
-    grid-row-start: 2;
-    grid-column-start: 3;
-    grid-row-end: 6;
-    grid-column-end: 5;
-    border-radius: 0.5em;
- }
- 
- #item-4 {
-    background-color: #D9D9D9; 
-    grid-row-start: 2;
-    grid-column-start: 5;
-    grid-row-end: 6;
-    grid-column-end: 8;
-    border-radius: 0.5em;
- }
- 
- #item-5 {
-    background-color: #D9D9D9; 
-    grid-row-start: 6;
-    grid-column-start: 1;
-    grid-row-end: 12;
-    grid-column-end: 4;
-    border-radius: 0.5em;
- }
- 
- #item-6 {
-    background-color: #D9D9D9; 
-    grid-row-start: 6;
-    grid-column-start: 4;
-    grid-row-end: 12;
-    grid-column-end: 8;
-    border-radius: 0.5em;
- }
- 
+}
+
+
+
+#item-1 {
+  background-color: #d9d9d9;
+  grid-row-start: 2;
+  grid-column-start: 1;
+  grid-row-end: 4;
+  grid-column-end: 3;
+  border-radius: 0.5em;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+}
+
+#item-1:hover {
+  border-radius: 0.5em;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
+
+#item-2 {
+  background-color: #d9d9d9;
+  grid-row-start: 4;
+  grid-column-start: 1;
+  grid-row-end: 6;
+  grid-column-end: 3;
+  border-radius: 0.5em;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+}
+
+#item-2:hover {
+  border-radius: 0.5em;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
+
+#item-3 {
+  background-color: #d9d9d9;
+  grid-row-start: 2;
+  grid-column-start: 3;
+  grid-row-end: 6;
+  grid-column-end: 5;
+  border-radius: 0.5em;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+}
+
+#item-3:hover {
+  border-radius: 0.5em;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
+
+#item-4 {
+  background-color: #d9d9d9;
+  grid-row-start: 2;
+  grid-column-start: 5;
+  grid-row-end: 6;
+  grid-column-end: 8;
+  border-radius: 0.5em;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+}
+
+#item-4:hover {
+  border-radius: 0.5em;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
+
+#item-5 {
+  background-color: #d9d9d9;
+  grid-row-start: 6;
+  grid-column-start: 1;
+  grid-row-end: 12;
+  grid-column-end: 4;
+  border-radius: 0.5em;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+}
+
+#item-5:hover {
+  border-radius: 0.5em;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
+
+#item-6 {
+  background-color: #d9d9d9;
+  grid-row-start: 6;
+  grid-column-start: 4;
+  grid-row-end: 12;
+  grid-column-end: 8;
+  border-radius: 0.5em;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+}
+
+#item-6:hover {
+  border-radius: 0.5em;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
