--- a/src/pages/private/home/components/nextCleaning/NextCleaning.Style.css
+++ b/src/pages/private/home/components/nextCleaning/NextCleaning.Style.css
@@ -1,11 +1,16 @@
-.wrapper{
-    padding: 1rem;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 12px;
+  width: 100%;
+  height: 100%;
 
-    .tittle{
-        font-size: 1.3rem;
-    }
-    .timer{
-        font-size: 5rem;
-    }
-
+  .tittle {
+    font-size: 24px;
+  }
+  .timer {
+    font-size: 40px;
+    font-weight: bolder;
+  }
 }
