--- a/src/components/inputsFields/inputField.style.css
+++ b/src/components/inputsFields/inputField.style.css
@@ -1,21 +1,40 @@
-.wrapper-input-field{
-    width: 300px;
+.wrapper-input-field {
+  width: 300px;
+  display: flex;
+  align-items: center;
 
-    .label-inputfield{
-        font-size: 20px;
-    }
-    .input-field{
-        width: 100%;
-        height: 2rem;
-        border-radius: 8px;
-        border: 1px solid rgba(81, 113, 255, 0.5);
-        padding-left: 0.5rem;
-    }
-    .input-field-error{
-        width: 100%;
-        height: 2rem;
-        border-radius: 8px;
-        border: 1px solid rgba(81, 113, 255, 0.5);
-        padding-left: 0.5rem;
-    }
+  .label-inputfield {
+    font-size: 20px;
+  }
+  .input-field {
+    width: 100%;
+    height: 2rem;
+    border-radius: 8px;
+    border: 1px solid rgba(81, 113, 255, 0.5);
+    padding-left: 0.5rem;
+  }
+  .input-field-error {
+    width: 100%;
+    height: 2rem;
+    border-radius: 8px;
+    border: 1px solid rgba(81, 113, 255, 0.5);
+   
+  }
+  .wrapper-button {
+    position: absolute;
+    transition: background-color 0.2s ease;
+    padding: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    height: 18px;
+    width: 18px;
+    margin-left: 20%;
+  }
+  .wrapper-button:hover {
+    background-color: #d9d9d8b0;
+    cursor: pointer;
+   
+  }
 }
