--- a/src/components/inputsFields/inputField.style.css
+++ b/src/components/inputsFields/inputField.style.css
@@ -21,16 +21,15 @@
    
   }
   .wrapper-button {
-    position: absolute;
+    position: fixed;
     transition: background-color 0.2s ease;
     padding: 0.3rem;
     display: flex;
-    align-items: center;
     justify-content: center;
     border-radius: 50%;
     height: 18px;
     width: 18px;
-    margin-left: 20%;
+    margin-left: 270px;
   }
   .wrapper-button:hover {
     background-color: #d9d9d8b0;
