--- a/src/pages/public/login/Login.style.css
+++ b/src/pages/public/login/Login.style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color:#F1F5FB;
 
   .card-login {
     height: 400px;
