--- a/src/pages/private/home/Home.Style.css
+++ b/src/pages/private/home/Home.Style.css
@@ -14,9 +14,13 @@
   grid-column-end: 8;
   border-radius: 8px;
   padding-left: 10px;
- 
+  background-color: #d9d9d9;
+  transition: border-radius 0.2s ease, box-shadow 0.2s ease;
 }
-
+#item-0:hover {
+  border-radius: 8px;
+  box-shadow: 0 0 15px 0 rgba(81, 113, 255, 0.5);
+}
 
 #item-1 {
   background-color: #d9d9d9;
