--- a/src/pages/private/home/components/particleData/ParticleData.Style.css
+++ b/src/pages/private/home/components/particleData/ParticleData.Style.css
@@ -1,30 +1,27 @@
 .wrapper-particle-data {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 100%;
   height: 100%;
-
+  margin-top: -10px;
   .tittle {
-    font-size: 22px;
+    font-size: 28px;
   }
   .wrapper-data-sensors {
     display: flex;
     flex-direction: column;
     gap: 2px;
-    font-size: 12px;
+    font-size: 16px;
   }
   .average {
     font-weight: bold;
     font-size: 21px;
-    margin-top: -5px;
   }
 
   .action-buttons {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    
+    gap: 12px;
 
     .button-cleaner {
       font-size: 10px !important;
