--- a/src/pages/private/home/components/nextCleaning/NextCleaning.Style.css
+++ b/src/pages/private/home/components/nextCleaning/NextCleaning.Style.css
@@ -8,9 +8,11 @@
 
   .tittle {
     font-size: 24px;
+    color: #ffffff;
   }
   .timer {
     font-size: 40px;
     font-weight: bolder;
+    color: #ffffff;
   }
 }
