--- a/src/pages/private/home/components/particleData/ParticleData.Style.css
+++ b/src/pages/private/home/components/particleData/ParticleData.Style.css
@@ -4,18 +4,22 @@
   width: 100%;
   height: 100%;
   margin-top: -10px;
+  gap: 12px;
   .tittle {
     font-size: 28px;
+    color: #ffffff;
   }
   .wrapper-data-sensors {
     display: flex;
     flex-direction: column;
     gap: 2px;
-    font-size: 16px;
+    font-size: 18px;
+    color: #ffffff;
   }
   .average {
     font-weight: bold;
     font-size: 21px;
+    color: #ffffff;
   }
 
   .action-buttons {
