--- a/src/pages/private/home/components/particleData/ParticleData.Style.css
+++ b/src/pages/private/home/components/particleData/ParticleData.Style.css
@@ -28,15 +28,18 @@
     gap: 12px;
 
     .button-cleaner {
+      color: #ffffff;
       font-size: 10px !important;
-      border-radius: 4px;
+      border-radius: 8px;
       cursor: pointer;
       width: 100%;
       height: 25px;
-      transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+      transition: background-color 0.2s ease, box-shadow 0.2s ease;
+      background-color: #5371FF
     }
     .button-cleaner:hover {
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+      background-color: #243980;
+      box-shadow: 0 0 10px 0 #5371FF;
     }
     .wrapper-sensors {
       display: flex;
@@ -51,27 +54,31 @@
       justify-content: center;
       align-items: center;
       cursor: pointer;
-      background-color: #d9d9d9;
-      border: 2px solid black;
+      background-color: #243980;
       border-radius: 50%;
       width: 1.5rem;
       height: 1.5rem;
-      transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+      transition: border-radius 0.2s ease, box-shadow 0.2s ease, color 0.s ease;
+      
+    }
+    .span-sensor-normal:hover {
+      color: #000000;
+      background-color: #ffffff;
+      box-shadow: 0 0 10px 0 #5371FF;
     }
     .span-sensor-selected {
       display: flex;
       justify-content: center;
       align-items: center;
-      cursor: pointer;
+      cursor: normal;
       background-color: white;
-      border: 2px solid black;
       border-radius: 50%;
       width: 1.5rem;
       height: 1.5rem;
-      transition: border-radius 0.2s ease, box-shadow 0.2s ease;
+      box-shadow: 0 0 10px 0 #5371FF;
+      transition: border-radius 0.2s ease, box-shadow 0.2s ease, color 0.3s ease;
     }
-    .span-sensor-normal:hover {
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    }
+   
+    
   }
 }
