--- a/src/pages/private/home/components/particleData/ParticleData.Style.css
+++ b/src/pages/private/home/components/particleData/ParticleData.Style.css
@@ -3,8 +3,9 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  margin-top: -10px;
-  gap: 12px;
+  .divisor{
+    width: 100%;
+  }
   .tittle {
     font-size: 28px;
     color: #ffffff;
@@ -12,7 +13,7 @@
   .wrapper-data-sensors {
     display: flex;
     flex-direction: column;
-    gap: 2px;
+
     font-size: 18px;
     color: #ffffff;
   }
@@ -26,16 +27,24 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    .divisor{
+      width: 100%;
+    }
+    .values{
+      font-size: 21px;
+      color: #ffffff;
+    }
 
     .button-cleaner {
       color: #ffffff;
-      font-size: 10px !important;
+      font-size: 15px !important;
       border-radius: 8px;
       cursor: pointer;
       width: 100%;
       height: 30px;
       transition: background-color 0.2s ease, box-shadow 0.2s ease;
       background-color: #5371ff;
+      
     }
     .button-cleaner:hover {
       background-color: #243980;
